# wget-rs

./: .gitignore  CHANGES.md  Cargo.toml  README.md  downloaded_test.txt  pack.sh
.github/workflows/: build.yaml  ci.yml
src/: cli.rs  download.rs  hash.rs  main.rs
tests/: integration_test.rs
