[package]
name = "wget-rs"
version = "0.0.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1.11.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] } # 如需异步下载
indicatif = "0.17"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
crc32fast = "1.3"
